--- a/arch/arm/configs/custom_n8000_defconfig
+++ b/arch/arm/configs/custom_n8000_defconfig
@@ -1310,6 +1310,7 @@ CONFIG_SIM_DETECT=y
 # CONFIG_SIM_SLOT_SWITCH is not set
 # CONFIG_LTE_MODEM_CMC220 is not set
 # CONFIG_INTERNAL_MODEM_IF is not set
+CONFIG_TOUCH_WAKE=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
