--- a/arch/arm/configs/custom_n8013_defconfig
+++ b/arch/arm/configs/custom_n8013_defconfig
@@ -1267,6 +1267,7 @@ CONFIG_STMPE811_ADC=y
 # CONFIG_SENSORS_LIS3_I2C is not set
 # CONFIG_SAMSUNG_C2C is not set
 # CONFIG_SEC_MODEM is not set
+CONFIG_TOUCH_WAKE=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
