--- a/arch/arm/configs/custom_i777_defconfig
+++ b/arch/arm/configs/custom_i777_defconfig
@@ -1171,6 +1171,14 @@ CONFIG_RFKILL_PM=y
 #
 # Device Drivers
 #
+CONFIG_MALI400=y
+CONFIG_MALI_VER_R3P2=y
+# CONFIG_MALI400_DEBUG is not set
+# CONFIG_MALI400_PROFILING is not set
+CONFIG_MALI_DVFS=y
+CONFIG_MALI400_UMP=y
+# CONFIG_MALI_SHARED_INTERRUPTS is not set
+# CONFIG_UMP_DEBUG is not set
 
 #
 # Generic Driver Options
@@ -2047,7 +2055,6 @@ CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 # CONFIG_USB_ZR364XX is not set
 # CONFIG_USB_STKWEBCAM is not set
 # CONFIG_USB_S2255 is not set
-CONFIG_MALI_400MP_UMP=y
 CONFIG_VIDEO_SAMSUNG=y
 CONFIG_VIDEO_SAMSUNG_V4L2=y
 CONFIG_VIDEO_FIMC=y
@@ -2112,19 +2119,12 @@ CONFIG_SAMSUNG_WORKAROUND_HPD_GLANCE=y
 #
 # Graphics support
 #
-# CONFIG_MALI_VER_BEFORE_R3P2 is not set
 # CONFIG_DRM is not set
 CONFIG_ION=y
 CONFIG_ION_EXYNOS=y
 CONFIG_ION_EXYNOS_CONTIGHEAP_SIZE=71680
 # CONFIG_ION_EXYNOS_CONTIGHEAP_DEBUG is not set
-CONFIG_MALI400=y
-CONFIG_MALI_VER_R3P2=y
-# CONFIG_MALI400_DEBUG is not set
-# CONFIG_MALI400_PROFILING is not set
-CONFIG_MALI_DVFS=y
-CONFIG_MALI400_UMP=y
-# CONFIG_MALI_SHARED_INTERRUPTS is not set
+# CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
@@ -2155,8 +2155,6 @@ CONFIG_FB_S5P_SPLASH_SCREEN=y
 # CONFIG_FB_S5P_LCD_INIT is not set
 # CONFIG_FB_S5P_DEBUG is not set
 CONFIG_FB_S5P_VSYNC_THREAD=y
-# CONFIG_FB_S5P_VSYNC_SEND_UEVENTS is not set
-CONFIG_FB_S5P_VSYNC_SYSFS=y
 # CONFIG_FB_S5P_TRACE_UNDERRUN is not set
 CONFIG_FB_S5P_DEFAULT_WINDOW=2
 CONFIG_FB_S5P_NR_BUFFERS=2
@@ -2164,6 +2162,7 @@ CONFIG_FB_S5P_NR_BUFFERS=2
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMD=12000
 CONFIG_FB_S5P_MDNIE=y
 # CONFIG_FB_MDNIE_PWM is not set
+# CONFIG_FB_EBOOK_PANEL_SCENARIO is not set
 # CONFIG_FB_S5P_MIPI_DSIM is not set
 CONFIG_FB_BGRA_ORDER=y
 # CONFIG_FB_RGBA_ORDER is not set
@@ -2779,7 +2778,7 @@ CONFIG_GENERIC_ACL=y
 # CONFIG_UDF_FS is not set
 
 #
-# DOS/FAT/NT Filesystems
+# DOS/FAT/exFAT/NT Filesystems
 #
 CONFIG_FAT_FS=y
 CONFIG_MSDOS_FS=y
