--- a/arch/arm/configs/custom_n7000_defconfig
+++ b/arch/arm/configs/custom_n7000_defconfig
@@ -425,7 +425,6 @@ CONFIG_BUSFREQ_L2_160M=y
 CONFIG_SEC_THERMISTOR=y
 # CONFIG_EXYNOS_SYSREG_PM is not set
 # CONFIG_ANDROID_WIP is not set
-# CONFIG_COMPACTION_RETRY is not set
 
 #
 # EXYNOS4 Machines
@@ -1184,6 +1183,14 @@ CONFIG_RFKILL_PM=y
 #
 # Device Drivers
 #
+CONFIG_MALI400=y
+CONFIG_MALI_VER_R3P2=y
+# CONFIG_MALI400_DEBUG is not set
+# CONFIG_MALI400_PROFILING is not set
+CONFIG_MALI_DVFS=y
+CONFIG_MALI400_UMP=y
+# CONFIG_MALI_SHARED_INTERRUPTS is not set
+# CONFIG_UMP_DEBUG is not set
 
 #
 # Generic Driver Options
@@ -2088,21 +2095,6 @@ CONFIG_VIDEO_MFC5X=y
 CONFIG_VIDEO_MFC_MAX_INSTANCE=4
 CONFIG_VIDEO_MFC_MEM_PORT_COUNT=2
 # CONFIG_VIDEO_MFC5X_DEBUG is not set
-CONFIG_VIDEO_MALI400MP=y
-# CONFIG_MALI_DED_ONLY is not set
-# CONFIG_MALI_DED_MMU is not set
-CONFIG_MALI_OSMEM_ONLY=y
-# CONFIG_MALI_DED_OSMEM is not set
-# CONFIG_MALI_R3P1_LSI is not set
-# CONFIG_VIDEO_MALI400MP_DEBUG is not set
-CONFIG_VIDEO_MALI400MP_DVFS=y
-CONFIG_VIDEO_UMP=y
-# CONFIG_UMP_R3P1_LSI is not set
-# CONFIG_UMP_DED_ONLY is not set
-CONFIG_UMP_OSMEM_ONLY=y
-# CONFIG_UMP_VCM_ONLY is not set
-CONFIG_UMP_MEM_SIZE=1024
-# CONFIG_VIDEO_UMP_DEBUG is not set
 CONFIG_VIDEO_FIMG2D=y
 # CONFIG_VIDEO_FIMG2D_DEBUG is not set
 CONFIG_VIDEO_FIMG2D3X=y
@@ -2175,8 +2167,6 @@ CONFIG_FB_S5P_SPLASH_SCREEN=y
 # CONFIG_FB_S5P_LCD_INIT is not set
 # CONFIG_FB_S5P_DEBUG is not set
 CONFIG_FB_S5P_VSYNC_THREAD=y
-# CONFIG_FB_S5P_VSYNC_SEND_UEVENTS is not set
-CONFIG_FB_S5P_VSYNC_SYSFS=y
 # CONFIG_FB_S5P_TRACE_UNDERRUN is not set
 CONFIG_FB_S5P_DEFAULT_WINDOW=2
 CONFIG_FB_S5P_NR_BUFFERS=2
@@ -2184,6 +2174,7 @@ CONFIG_FB_S5P_NR_BUFFERS=2
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMD=24000
 CONFIG_FB_S5P_MDNIE=y
 # CONFIG_FB_MDNIE_PWM is not set
+# CONFIG_FB_EBOOK_PANEL_SCENARIO is not set
 CONFIG_FB_S5P_MIPI_DSIM=y
 CONFIG_FB_BGRA_ORDER=y
 # CONFIG_FB_RGBA_ORDER is not set
@@ -2194,9 +2185,15 @@ CONFIG_FB_S5P_S6E8AA0=y
 # CONFIG_FB_S5P_EA8061 is not set
 # CONFIG_FB_S5P_S6EVR02 is not set
 # CONFIG_FB_S5P_S6D6AA1 is not set
+# CONFIG_FB_S5P_NT71391 is not set
+# CONFIG_FB_S5P_S6D7AA0 is not set
+# CONFIG_FB_S5P_S6E88A0 is not set
+# CONFIG_FB_S5P_HX8369B is not set
 CONFIG_S6E8AA0_AMS529HA01=y
 # CONFIG_S6E8AA0_AMS480GYXX is not set
+# CONFIG_S6E8AA0_AMS465XX is not set
 # CONFIG_AID_DIMMING is not set
+# CONFIG_LCD_REVERSE is not set
 # CONFIG_FB_S5P_EXTDSP is not set
 # CONFIG_S5P_DSIM_SWITCHABLE_DUAL_LCD is not set
 # CONFIG_FB_S1D13XXX is not set
@@ -2552,6 +2549,7 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
 # CONFIG_MMC_SELECTIVE_PACKED_CMD_POLICY is not set
+# CONFIG_MMC_CPRM is not set
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -2752,6 +2750,7 @@ CONFIG_ACCESSORY=y
 # CONFIG_IR_REMOCON is not set
 # CONFIG_EXTCON is not set
 # CONFIG_BARCODE_EMUL is not set
+# CONFIG_SAMSUNG_PHONE_TTY is not set
 CONFIG_IOMMU_SUPPORT=y
 # CONFIG_FELICA is not set
 # CONFIG_AUTHENTEC_VPNCLIENT_INTERCEPTOR is not set
@@ -2803,7 +2802,7 @@ CONFIG_GENERIC_ACL=y
 # CONFIG_UDF_FS is not set
 
 #
-# DOS/FAT/NT Filesystems
+# DOS/FAT/exFAT/NT Filesystems
 #
 CONFIG_FAT_FS=y
 CONFIG_MSDOS_FS=y
