--- a/arch/arm/configs/custom_t0ltecdma_defconfig
+++ b/arch/arm/configs/custom_t0ltecdma_defconfig
@@ -1290,6 +1290,7 @@ CONFIG_MUIC_MAX77693_SUPPORT_CAR_DOCK=y
 # CONFIG_SENSORS_LIS3_I2C is not set
 # CONFIG_SAMSUNG_C2C is not set
 # CONFIG_SEC_MODEM is not set
+CONFIG_TOUCH_WAKE=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
