--- a/arch/arm/configs/custom_n8013_defconfig
+++ b/arch/arm/configs/custom_n8013_defconfig
@@ -703,15 +703,15 @@ CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
+# CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 CONFIG_CPU_FREQ_GOV_HOTPLUG=y
 CONFIG_CPU_FREQ_GOV_LULZACTIVEQ=y
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND_FLEXRATE is not set
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
+# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_GOV_ADAPTIVE is not set
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_GOV_SLP is not set
 # CONFIG_CPU_FREQ_DVFS_MONITOR is not set
