smdk4412: remove adaptive
Change-Id: Id77c1aa2ddf4569e8f155b4eec466cecbe89d8a7

--- a/arch/arm/configs/custom_n8013_defconfig
+++ b/arch/arm/configs/custom_n8013_defconfig
@@ -711,7 +711,7 @@ CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND_FLEXRATE is not set
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
+# CONFIG_CPU_FREQ_GOV_ADAPTIVE is not set
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_GOV_SLP is not set
 # CONFIG_CPU_FREQ_DVFS_MONITOR is not set
