--- a/arch/arm/configs/custom_n8000_defconfig
+++ b/arch/arm/configs/custom_n8000_defconfig
@@ -728,7 +728,7 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND_FLEXRATE is not set
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_CPU_FREQ_GOV_ADAPTIVE is not set
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_GOV_SLP is not set
