--- a/arch/arm/configs/custom_d710_defconfig
+++ b/arch/arm/configs/custom_d710_defconfig
@@ -1254,6 +1254,7 @@ CONFIG_USBHUB_USB3803=y
 # CONFIG_SENSORS_LIS3_SPI is not set
 # CONFIG_SENSORS_LIS3_I2C is not set
 # CONFIG_SEC_MODEM is not set
+CONFIG_TOUCH_WAKE=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
