--- a/arch/arm/configs/custom_i777_defconfig
+++ b/arch/arm/configs/custom_i777_defconfig
@@ -1302,6 +1302,7 @@ CONFIG_LINK_DEVICE_HSIC=y
 # CONFIG_SIM_SLOT_SWITCH is not set
 # CONFIG_LTE_MODEM_CMC220 is not set
 # CONFIG_INTERNAL_MODEM_IF is not set
+CONFIG_TOUCH_WAKE=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
