n80xx: Add missing components from I9300 update12 display merge
Change-Id: I5da7d1a90999f08346f3df783f1fb31470bccb26

--- a/arch/arm/mach-exynos/Makefile
+++ b/arch/arm/mach-exynos/Makefile
@@ -164,6 +164,7 @@ obj-$(CONFIG_MIDAS_COMMON)		+= sec-common.o\
 					   midas-tsp.o board-midas-wlan.o \
 					   midas-camera.o midas-thermistor.o \
 					   midas-mhl.o midas-lcd.o midas-sound.o
+obj-$(CONFIG_FB_S5P)                    += board-lcd-rgb.o
 else
 ifeq ($(CONFIG_MACH_P4NOTE),y)
 obj-$(CONFIG_MIDAS_COMMON)		+= sec-common.o\
@@ -171,6 +172,7 @@ obj-$(CONFIG_MIDAS_COMMON)		+= sec-common.o\
 					   midas-camera.o midas-thermistor.o \
 					   midas-mhl.o midas-lcd.o midas-sound.o \
                                            board-gps-bcm475x.o
+obj-$(CONFIG_FB_S5P)                    += board-lcd-rgb.o
 else
 ifeq ($(CONFIG_MACH_SLP_T0_LTE),y)
 obj-$(CONFIG_MIDAS_COMMON)		+= sec-common.o \
