--- a/arch/arm/mach-exynos/Makefile
+++ b/arch/arm/mach-exynos/Makefile
@@ -156,21 +156,23 @@ ifeq ($(CONFIG_MACH_T0),y)
 obj-$(CONFIG_MIDAS_COMMON)		+= sec-common.o \
 					   midas-tsp.o board-midas-wlan.o \
 					   midas-camera.o midas-thermistor.o \
-					   midas-mhl.o midas-lcd.o t0-sound.o
+					   midas-mhl.o t0-sound.o
 obj-$(CONFIG_SEC_MODEM)			+= board-gps-bcm475x.o
 else
 ifeq ($(CONFIG_MACH_P4NOTELTE_USA_VZW),y)
 obj-$(CONFIG_MIDAS_COMMON)		+= sec-common.o\
 					   midas-tsp.o board-midas-wlan.o \
 					   midas-camera.o midas-thermistor.o \
-					   midas-mhl.o midas-lcd.o midas-sound.o
+					   midas-mhl.o midas-sound.o
+obj-$(CONFIG_FB_S5P)			+= board-lcd-rgb.o
 else
 ifeq ($(CONFIG_MACH_P4NOTE),y)
 obj-$(CONFIG_MIDAS_COMMON)		+= sec-common.o\
 					   midas-tsp.o board-midas-wlan.o \
 					   midas-camera.o midas-thermistor.o \
-					   midas-mhl.o midas-lcd.o midas-sound.o \
+					   midas-mhl.o midas-sound.o \
                                            board-gps-bcm475x.o
+obj-$(CONFIG_FB_S5P)			+= board-lcd-rgb.o
 else
 ifeq ($(CONFIG_MACH_SLP_T0_LTE),y)
 obj-$(CONFIG_MIDAS_COMMON)		+= sec-common.o \
