n8013: enable logging last_kmsg.
Change-Id: I907e6f86c2adcc9a2597999973237db0c721ef48

--- a/arch/arm/configs/custom_n8013_defconfig
+++ b/arch/arm/configs/custom_n8013_defconfig
@@ -520,7 +520,10 @@ CONFIG_SEC_DEBUG_AUXILIARY_LOG=y
 # CONFIG_SEC_DEBUG_LIST_CORRUPTION is not set
 CONFIG_SEC_WATCHDOG_RESET=y
 CONFIG_SEC_WATCHDOG_PET_TIME=0
-# CONFIG_SEC_LOG is not set
+CONFIG_SEC_LOG=y
+CONFIG_SEC_LOG_NONCACHED=y
+CONFIG_SEC_LOG_LAST_KMSG=y
+
 # CONFIG_EHCI_IRQ_DISTRIBUTION is not set
 # CONFIG_BT_CSR8811 is not set
 # CONFIG_BT_BCM4330 is not set
