--- a/arch/arm/configs/custom_i925_defconfig
+++ b/arch/arm/configs/custom_i925_defconfig
@@ -2885,7 +2885,7 @@ CONFIG_INPUT_YAS_MAGNETOMETER_POSITION=0
 CONFIG_ACCESSORY=y
 CONFIG_30PIN_CONN=y
 # CONFIG_MHL_SII9234 is not set
-CONFIG_SEC_KEYBOARD_DOCK=y
+# CONFIG_SEC_KEYBOARD_DOCK is not set
 # CONFIG_HPD_PULL is not set
 CONFIG_SAMSUNG_MHL_9290=y
 CONFIG_IR_REMOCON=y
