defconfigs: Regenerate to sync up with current Kconfig setup
Change-Id: Ie2943611d5cc17baeba797ca7cb5ce8cda3459a0

--- a/arch/arm/configs/custom_i9300_defconfig
+++ b/arch/arm/configs/custom_i9300_defconfig
@@ -179,15 +179,17 @@ CONFIG_LBDAF=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_ROW=y
-CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
@@ -1186,6 +1188,14 @@ CONFIG_RFKILL_PM=y
 #
 # Device Drivers
 #
+CONFIG_MALI400=y
+CONFIG_MALI_VER_R3P2=y
+# CONFIG_MALI400_DEBUG is not set
+# CONFIG_MALI400_PROFILING is not set
+CONFIG_MALI_DVFS=y
+CONFIG_MALI400_UMP=y
+# CONFIG_MALI_SHARED_INTERRUPTS is not set
+# CONFIG_UMP_DEBUG is not set
 
 #
 # Generic Driver Options
@@ -2110,7 +2120,6 @@ CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 # CONFIG_USB_ZR364XX is not set
 # CONFIG_USB_STKWEBCAM is not set
 # CONFIG_USB_S2255 is not set
-CONFIG_MALI_400MP_UMP=y
 CONFIG_VIDEO_SAMSUNG=y
 CONFIG_VIDEO_SAMSUNG_V4L2=y
 CONFIG_VIDEO_FIMC=y
@@ -2194,17 +2203,13 @@ CONFIG_SAMSUNG_WORKAROUND_HPD_GLANCE=y
 #
 # Graphics support
 #
-# CONFIG_MALI_VER_BEFORE_R3P2 is not set
 # CONFIG_DRM is not set
 CONFIG_ION=y
 CONFIG_ION_EXYNOS=y
 CONFIG_ION_EXYNOS_CONTIGHEAP_SIZE=71680
 # CONFIG_ION_EXYNOS_CONTIGHEAP_DEBUG is not set
+# CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
-CONFIG_MALI400=y
-CONFIG_MALI_VER_R3P2=y
-CONFIG_MALI_DVFS=y
-CONFIG_MALI400_UMP=y
 CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
 # CONFIG_FB_DDC is not set
@@ -2234,8 +2239,6 @@ CONFIG_FB_S5P_SPLASH_SCREEN=y
 # CONFIG_FB_S5P_LCD_INIT is not set
 # CONFIG_FB_S5P_DEBUG is not set
 CONFIG_FB_S5P_VSYNC_THREAD=y
-# CONFIG_FB_S5P_VSYNC_SEND_UEVENTS is not set
-CONFIG_FB_S5P_VSYNC_SYSFS=y
 # CONFIG_FB_S5P_TRACE_UNDERRUN is not set
 CONFIG_FB_S5P_DEFAULT_WINDOW=2
 CONFIG_FB_S5P_NR_BUFFERS=2
@@ -2243,6 +2246,7 @@ CONFIG_FB_S5P_NR_BUFFERS=2
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMD=8192
 CONFIG_FB_S5P_MDNIE=y
 # CONFIG_FB_MDNIE_PWM is not set
+# CONFIG_FB_EBOOK_PANEL_SCENARIO is not set
 CONFIG_FB_S5P_MIPI_DSIM=y
 CONFIG_FB_BGRA_ORDER=y
 # CONFIG_FB_RGBA_ORDER is not set
@@ -2255,9 +2259,15 @@ CONFIG_FB_S5P_S6E8AA0=y
 # CONFIG_FB_S5P_S6EVR02 is not set
 # CONFIG_FB_S5P_S6D6AA1 is not set
 # CONFIG_FB_S5P_S6E63M0 is not set
+# CONFIG_FB_S5P_NT71391 is not set
+# CONFIG_FB_S5P_S6D7AA0 is not set
+# CONFIG_FB_S5P_S6E88A0 is not set
+# CONFIG_FB_S5P_HX8369B is not set
 # CONFIG_S6E8AA0_AMS529HA01 is not set
 CONFIG_S6E8AA0_AMS480GYXX=y
+# CONFIG_S6E8AA0_AMS465XX is not set
 CONFIG_AID_DIMMING=y
+# CONFIG_LCD_REVERSE is not set
 CONFIG_LCD_FREQ_SWITCH=y
 CONFIG_FB_S5P_EXTDSP=y
 # CONFIG_FB_S5P_EXTDSP_DEBUG is not set
