--- a/arch/arm/configs/custom_i925_defconfig
+++ b/arch/arm/configs/custom_i925_defconfig
@@ -30,7 +30,6 @@ CONFIG_ARM_PATCH_PHYS_VIRT=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
-CONFIG_IRQ_WORK=y
 
 #
 # General setup
@@ -181,13 +180,17 @@ CONFIG_LBDAF=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_ROW=y
-CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_ROW is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
@@ -419,7 +422,6 @@ CONFIG_BUSFREQ_QOS_1280X800=y
 # CONFIG_BUSFREQ_DEBUG is not set
 # CONFIG_BUSFREQ_L2_160M is not set
 CONFIG_SEC_THERMISTOR=y
-# CONFIG_SEC_SUBTHERMISTOR is not set
 # CONFIG_EXYNOS_SYSREG_PM is not set
 CONFIG_ANDROID_WIP=y
 # CONFIG_COMPACTION_RETRY is not set
@@ -448,12 +450,12 @@ CONFIG_ANDROID_WIP=y
 # CONFIG_TARGET_LOCALE_JPN is not set
 # CONFIG_TARGET_LOCALE_CHN is not set
 CONFIG_TARGET_LOCALE_USA=y
+# CONFIG_MACH_P4NOTELTE_USA_ANY is not set
 CONFIG_MACH_P4NOTELTE_USA_VZW=y
 # CONFIG_MACH_P4NOTELTE_USA_ATT is not set
 # CONFIG_MACH_P4NOTELTE_USA_TMO is not set
 # CONFIG_MACH_P4NOTELTE_USA_SPR is not set
 # CONFIG_MACH_P4NOTELTE_USA_USCC is not set
-# CONFIG_MACH_P4NOTELTE_USA_ANY is not set
 # CONFIG_MACH_SMDK4X12 is not set
 CONFIG_MACH_MIDAS=y
 # CONFIG_MACH_M0 is not set
@@ -462,7 +464,6 @@ CONFIG_MACH_MIDAS=y
 CONFIG_MACH_P4NOTE=y
 # CONFIG_MACH_GC1 is not set
 # CONFIG_MACH_T0 is not set
-# CONFIG_MACH_KONA is not set
 # CONFIG_MACH_IRON is not set
 # CONFIG_MACH_GRANDE is not set
 # CONFIG_MACH_BAFFIN is not set
@@ -470,10 +471,7 @@ CONFIG_MACH_P4NOTE=y
 CONFIG_P4NOTE_00_BD=y
 # CONFIG_GC1_00_BD is not set
 # CONFIG_T0_00_BD is not set
-# CONFIG_KONA_00_BD is not set
 # CONFIG_T0_04_BD is not set
-# CONFIG_MACH_T0_GODIVA_LTE is not set
-# CONFIG_MACH_T0_VOLTE_Q is not set
 # CONFIG_IRON_BD is not set
 # CONFIG_GRANDE_BD is not set
 # CONFIG_WRITEBACK_ENABLED is not set
@@ -530,14 +528,7 @@ CONFIG_SEC_DEBUG_AUXILIARY_LOG=y
 CONFIG_SEC_WATCHDOG_RESET=y
 CONFIG_SEC_WATCHDOG_PET_TIME=0
 # CONFIG_SEC_LOG is not set
-# CONFIG_SEC_LOG_NONCACHED is not set
-CONFIG_SEC_LOG_LAST_KMSG=y
 # CONFIG_EHCI_IRQ_DISTRIBUTION is not set
-
-#
-# Connectivity Feature
-#
-# CONFIG_GPS_BRCM_475X is not set
 # CONFIG_BT_CSR8811 is not set
 # CONFIG_BT_BCM4330 is not set
 CONFIG_BT_BCM4334=y
@@ -557,8 +548,6 @@ CONFIG_QC_MODEM_M3=y
 CONFIG_USB_CDFS_SUPPORT=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
 # CONFIG_CORESIGHT_ETM is not set
-CONFIG_CPU_FREQ_TETHERING=y
-# CONFIG_MACH_KONA_SENSOR is not set
 
 #
 # Processor Type
@@ -612,6 +601,9 @@ CONFIG_ARM_ERRATA_761320=y
 # CONFIG_ARM_ERRATA_761171 is not set
 # CONFIG_ARM_ERRATA_762974 is not set
 # CONFIG_ARM_ERRATA_763722 is not set
+CONFIG_ARM_ERRATA_764369=y
+# CONFIG_PL310_ERRATA_769419 is not set
+# CONFIG_ARM_ERRATA_775420 is not set
 CONFIG_ARM_GIC=y
 CONFIG_PL330=y
 # CONFIG_FIQ_DEBUGGER is not set
@@ -622,8 +614,6 @@ CONFIG_PL330=y
 # CONFIG_PCI_SYSCALL is not set
 # CONFIG_ARCH_SUPPORTS_MSI is not set
 # CONFIG_PCCARD is not set
-CONFIG_ARM_ERRATA_764369=y
-# CONFIG_PL310_ERRATA_769419 is not set
 
 #
 # Kernel Features
@@ -675,8 +665,7 @@ CONFIG_CMA=y
 # CONFIG_CMA_DEVELOPEMENT is not set
 CONFIG_CMA_BEST_FIT=y
 # CONFIG_DEBUG_VMALLOC is not set
-# CONFIG_LOWMEM_CHECK is not set
-CONFIG_FORCE_MAX_ZONEORDER=11
+CONFIG_FORCE_MAX_ZONEORDER=12
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
 # CONFIG_SECCOMP is not set
@@ -1181,6 +1170,14 @@ CONFIG_RFKILL_PM=y
 #
 # Device Drivers
 #
+CONFIG_MALI400=y
+CONFIG_MALI_VER_R3P2=y
+# CONFIG_MALI400_DEBUG is not set
+# CONFIG_MALI400_PROFILING is not set
+CONFIG_MALI_DVFS=y
+CONFIG_MALI400_UMP=y
+# CONFIG_MALI_SHARED_INTERRUPTS is not set
+# CONFIG_UMP_DEBUG is not set
 
 #
 # Generic Driver Options
@@ -1236,7 +1233,6 @@ CONFIG_MISC_DEVICES=y
 # CONFIG_SENSORS_APDS990X is not set
 # CONFIG_HMC6352 is not set
 # CONFIG_SENSORS_AK8975 is not set
-# CONFIG_SENSORS_AK8963 is not set
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
 CONFIG_UID_STAT=y
@@ -1246,7 +1242,6 @@ CONFIG_UID_STAT=y
 # CONFIG_JACK_MON is not set
 # CONFIG_UART_SELECT is not set
 # CONFIG_SWITCH_DUAL_MODEM is not set
-# CONFIG_SWITCH_USB_PATH_AUTO is not set
 # CONFIG_WIMAX_CMC is not set
 CONFIG_SEC_DEV_JACK=y
 # CONFIG_MUIC_DET_JACK is not set
@@ -1280,6 +1275,7 @@ CONFIG_STMPE811_ADC=y
 # CONFIG_SENSORS_LIS3_I2C is not set
 # CONFIG_SAMSUNG_C2C is not set
 # CONFIG_SEC_MODEM is not set
+# CONFIG_TOUCH_WAKE is not set
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
@@ -1360,10 +1356,11 @@ CONFIG_WLAN=y
 # CONFIG_USB_NET_RNDIS_WLAN is not set
 CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_ATH_COMMON is not set
-CONFIG_BCMDHD=m
 # CONFIG_BCM4330 is not set
 CONFIG_BCM4334=y
+# CONFIG_BCM4335 is not set
 # CONFIG_BCM43241 is not set
+CONFIG_BROADCOM_WIFI=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
@@ -1372,7 +1369,6 @@ CONFIG_WLAN_REGION_CODE=100
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
 # CONFIG_MWIFIEX is not set
-# CONFIG_LGUIWLAN is not set
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -1460,8 +1456,6 @@ CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_SECBRIDGE is not set
 CONFIG_INPUT_KEYRESET=y
 # CONFIG_INPUT_FBSUSPEND is not set
-# CONFIG_INPUT_MPU6050 is not set
-# CONFIG_INPUT_MPU6050_POLLING is not set
 
 #
 # Input Device Drivers
@@ -1540,19 +1534,13 @@ CONFIG_TOUCHSCREEN_ATMEL_MXT1664S=y
 # CONFIG_TOUCHSCREEN_MXT1386 is not set
 # CONFIG_TOUCHSCREEN_MXT768E is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_S7301=y
-# CONFIG_TOUCHSCREEN_SYNAPTICS_S7301_KEYS is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_S7301_WORKAROUND is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_TMA46X is not set
+# CONFIG_TOUCHSCREEN_CYTTSP4 is not set
 CONFIG_SEC_TOUCHSCREEN_DVFS_LOCK=y
-# CONFIG_SEC_TOUCHSCREEN_SURFACE_TOUCH is not set
 # CONFIG_KEYPAD_MELFAS_TOUCH is not set
-# CONFIG_TOUCHSCREEN_ATMEL_MXTS is not set
 # CONFIG_TOUCHSCREEN_ATMEL_MXT540S is not set
 CONFIG_INPUT_WACOM=y
 CONFIG_EPEN_WACOM_G5SP=y
 # CONFIG_EPEN_WACOM_G9PM is not set
-# CONFIG_EPEN_WACOM_G9PL is not set
-# CONFIG_RMI4_BUS is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_SENSORS_BH1721FVC is not set
 # CONFIG_INPUT_AD714X is not set
@@ -2032,7 +2020,6 @@ CONFIG_VIDEO_ISX012=y
 # CONFIG_VIDEO_S5K4EA is not set
 # CONFIG_VIDEO_S5C73M3 is not set
 # CONFIG_VIDEO_SLP_S5C73M3 is not set
-# CONFIG_VIDEO_SR130PC20 is not set
 CONFIG_VIDEO_IMPROVE_STREAMOFF=y
 
 #
@@ -2099,7 +2086,6 @@ CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 # CONFIG_USB_ZR364XX is not set
 # CONFIG_USB_STKWEBCAM is not set
 # CONFIG_USB_S2255 is not set
-CONFIG_MALI_400MP_UMP=y
 CONFIG_VIDEO_SAMSUNG=y
 CONFIG_VIDEO_SAMSUNG_V4L2=y
 CONFIG_VIDEO_FIMC=y
@@ -2181,19 +2167,12 @@ CONFIG_SAMSUNG_WORKAROUND_HPD_GLANCE=y
 #
 # Graphics support
 #
-# CONFIG_MALI_VER_BEFORE_R3P2 is not set
 # CONFIG_DRM is not set
 CONFIG_ION=y
 CONFIG_ION_EXYNOS=y
 CONFIG_ION_EXYNOS_CONTIGHEAP_SIZE=81920
 # CONFIG_ION_EXYNOS_CONTIGHEAP_DEBUG is not set
-CONFIG_MALI400=y
-CONFIG_MALI_VER_R3P2=y
-# CONFIG_MALI400_DEBUG is not set
-# CONFIG_MALI400_PROFILING is not set
-CONFIG_MALI_DVFS=y
-CONFIG_MALI400_UMP=y
-# CONFIG_MALI_SHARED_INTERRUPTS is not set
+# CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
@@ -2224,7 +2203,6 @@ CONFIG_FB_S5P_SPLASH_SCREEN=y
 # CONFIG_FB_S5P_LCD_INIT is not set
 # CONFIG_FB_S5P_DEBUG is not set
 CONFIG_FB_S5P_VSYNC_THREAD=y
-CONFIG_FB_S5P_VSYNC_SYSFS=y
 # CONFIG_FB_S5P_TRACE_UNDERRUN is not set
 CONFIG_FB_S5P_DEFAULT_WINDOW=3
 CONFIG_FB_S5P_NR_BUFFERS=2
@@ -2232,6 +2210,7 @@ CONFIG_FB_S5P_NR_BUFFERS=2
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMD=8192
 CONFIG_FB_S5P_MDNIE=y
 CONFIG_FB_MDNIE_PWM=y
+# CONFIG_FB_EBOOK_PANEL_SCENARIO is not set
 # CONFIG_FB_S5P_MIPI_DSIM is not set
 CONFIG_FB_BGRA_ORDER=y
 # CONFIG_FB_RGBA_ORDER is not set
@@ -2269,7 +2248,6 @@ CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_PWM is not set
 # CONFIG_BACKLIGHT_ADP8860 is not set
 # CONFIG_BACKLIGHT_ADP8870 is not set
-# CONFIG_BACKLIGHT_LP855X is not set
 
 #
 # Display device support
@@ -2500,7 +2478,6 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_STORAGE_KARMA is not set
 # CONFIG_USB_STORAGE_CYPRESS_ATACB is not set
 # CONFIG_USB_STORAGE_ENE_UB6250 is not set
-# CONFIG_USB_UAS is not set
 # CONFIG_USB_LIBUSUAL is not set
 
 #
@@ -2706,6 +2683,7 @@ CONFIG_LEDS_CLASS=y
 #
 # LED Triggers
 #
+# CONFIG_LEDS_TRIGGER_NOTIFICATION is not set
 # CONFIG_NFC_DEVICES is not set
 CONFIG_SWITCH=y
 CONFIG_SWITCH_GPIO=y
@@ -2850,7 +2828,6 @@ CONFIG_MACH_NO_WESTBRIDGE=y
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_VIBETONZ=y
 CONFIG_MOTOR_DRV_ISA1200=y
-# CONFIG_MOTOR_DRV_DRV2603 is not set
 # CONFIG_FM_RADIO is not set
 CONFIG_SENSORS_CORE=y
 CONFIG_SENSORS_AK8975C=y
@@ -2869,9 +2846,6 @@ CONFIG_SENSORS_AL3201=y
 # CONFIG_SENSORS_K3G is not set
 CONFIG_SENSORS_LSM330DLC=y
 # CONFIG_SENSORS_LPS331 is not set
-# CONFIG_SENSORS_YAS532 is not set
-# CONFIG_SENSORS_YAS_ORI is not set
-CONFIG_INPUT_YAS_MAGNETOMETER_POSITION=0
 # CONFIG_SENSORS_SYSFS is not set
 # CONFIG_SENSORS_SSP is not set
 # CONFIG_SENSORS_SSP_LSM330 is not set
@@ -2893,6 +2867,7 @@ CONFIG_IR_REMOCON=y
 CONFIG_IR_REMOCON_MC96=y
 # CONFIG_EXTCON is not set
 # CONFIG_BARCODE_EMUL is not set
+# CONFIG_SAMSUNG_PHONE_TTY is not set
 CONFIG_MOBICORE_SUPPORT=y
 # CONFIG_MOBICORE_DEBUG is not set
 CONFIG_MOBICORE_API=y
@@ -2962,7 +2937,6 @@ CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_PROC_FS=y
 CONFIG_PROC_SYSCTL=y
 CONFIG_PROC_PAGE_MONITOR=y
-# CONFIG_PROC_SEC_MEMINFO is not set
 CONFIG_SYSFS=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
@@ -3359,6 +3333,9 @@ CONFIG_ZLIB_DEFLATE=y
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
 CONFIG_GENERIC_ALLOCATOR=y
+CONFIG_REED_SOLOMON=y
+CONFIG_REED_SOLOMON_ENC8=y
+CONFIG_REED_SOLOMON_DEC8=y
 CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=y
 CONFIG_TEXTSEARCH_BM=y
