--- a/arch/arm/configs/custom_n7100_defconfig
+++ b/arch/arm/configs/custom_n7100_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.31 Kernel Configuration
+# Linux/arm 3.0.64 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -30,7 +30,6 @@ CONFIG_ARM_PATCH_PHYS_VIRT=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
-CONFIG_IRQ_WORK=y
 
 #
 # General setup
@@ -86,7 +85,6 @@ CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_CGROUP_MEM_RES_CTLR is not set
-# CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
@@ -155,7 +153,6 @@ CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
-CONFIG_HAVE_HW_BREAKPOINT=y
 
 #
 # GCOV-based kernel profiling
@@ -182,13 +179,17 @@ CONFIG_LBDAF=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_ROW=y
-CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_ROW is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
@@ -219,7 +220,7 @@ CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_WRITE_UNLOCK_BH is not set
 # CONFIG_INLINE_WRITE_UNLOCK_IRQ is not set
 # CONFIG_INLINE_WRITE_UNLOCK_IRQRESTORE is not set
-# CONFIG_MUTEX_SPIN_ON_OWNER is not set
+CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
 
 #
@@ -292,7 +293,6 @@ CONFIG_S3C_ADDR_BASE=0xFC000000
 #
 # Boot options
 #
-# CONFIG_S3C_BOOT_WATCHDOG is not set
 # CONFIG_S3C_BOOT_ERROR_RESET is not set
 CONFIG_S3C_BOOT_UART_FORCE_FIFO=y
 CONFIG_S3C_LOWLEVEL_UART_PORT=2
@@ -440,11 +440,11 @@ CONFIG_ANDROID_WIP=y
 # CONFIG_MACH_U1_NA_SPR is not set
 # CONFIG_MACH_U1_NA_USCC is not set
 # CONFIG_MACH_U1 is not set
+# CONFIG_TARGET_LOCALE_NAATT_TEMP is not set
 # CONFIG_MACH_PX is not set
 CONFIG_TARGET_LOCALE_EUR=y
 # CONFIG_TARGET_LOCALE_LTN is not set
 # CONFIG_TARGET_LOCALE_KOR is not set
-# CONFIG_TARGET_LOCALE_NAATT_TEMP is not set
 # CONFIG_TARGET_LOCALE_P2EUR_TEMP is not set
 # CONFIG_TARGET_LOCALE_P2TMO_TEMP is not set
 # CONFIG_TARGET_LOCALE_NA is not set
@@ -453,6 +453,24 @@ CONFIG_TARGET_LOCALE_EUR=y
 # CONFIG_TARGET_LOCALE_JPN is not set
 # CONFIG_TARGET_LOCALE_CHN is not set
 # CONFIG_TARGET_LOCALE_USA is not set
+# CONFIG_MACH_T0_LTE is not set
+# CONFIG_MACH_T0_USA_ATT is not set
+# CONFIG_MACH_T0_USA_TMO is not set
+# CONFIG_MACH_T0_USA_VZW is not set
+# CONFIG_MACH_T0_USA_SPR is not set
+# CONFIG_MACH_T0_USA_USCC is not set
+# CONFIG_MACH_T0_EUR_LTE is not set
+CONFIG_MACH_T0_EUR_OPEN=y
+# CONFIG_MACH_T0_KOR_SKT is not set
+# CONFIG_MACH_T0_KOR_KT is not set
+# CONFIG_MACH_T0_KOR_LGT is not set
+# CONFIG_MACH_T0_JPN_LTE_DCM is not set
+# CONFIG_MACH_T0_CHN_OPEN is not set
+# CONFIG_MACH_T0_CHN_CU is not set
+# CONFIG_MACH_T0_CHN_CU_DUOS is not set
+# CONFIG_MACH_T0_CHN_OPEN_DUOS is not set
+# CONFIG_MACH_T0_CHN_CMCC is not set
+# CONFIG_MACH_T0_CHN_CTC is not set
 # CONFIG_MACH_SMDK4X12 is not set
 CONFIG_MACH_MIDAS=y
 # CONFIG_MACH_M0 is not set
@@ -472,6 +490,7 @@ CONFIG_T0_04_BD=y
 # CONFIG_IRON_BD is not set
 # CONFIG_GRANDE_BD is not set
 # CONFIG_WRITEBACK_ENABLED is not set
+CONFIG_EXYNOS_SOUND_PLATFORM_DATA=y
 # CONFIG_JACK_FET is not set
 # CONFIG_JACK_GROUND_DET is not set
 CONFIG_SAMSUNG_ANALOG_UART_SWITCH=1
@@ -549,6 +568,7 @@ CONFIG_SEC_MODEM_M0=y
 # CONFIG_SEC_MODEM_IRON is not set
 # CONFIG_SEC_MODEM_P8LTE is not set
 # CONFIG_SEC_MODEM_T0_TD_DUAL is not set
+# CONFIG_SEC_MODEM_U1_SPR is not set
 # CONFIG_BT_CSR8811 is not set
 # CONFIG_BT_BCM4330 is not set
 CONFIG_BT_BCM4334=y
@@ -563,6 +583,7 @@ CONFIG_BT_MGMT=y
 # CONFIG_QC_MODEM_MDM9X15 is not set
 # CONFIG_MDM_HSIC_PM is not set
 # CONFIG_EMI_ERROR_RECOVERY is not set
+# CONFIG_SIM_DETECT is not set
 CONFIG_USB_CDFS_SUPPORT=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
 # CONFIG_CORESIGHT_ETM is not set
@@ -619,6 +640,9 @@ CONFIG_ARM_ERRATA_761320=y
 # CONFIG_ARM_ERRATA_761171 is not set
 # CONFIG_ARM_ERRATA_762974 is not set
 # CONFIG_ARM_ERRATA_763722 is not set
+CONFIG_ARM_ERRATA_764369=y
+# CONFIG_PL310_ERRATA_769419 is not set
+# CONFIG_ARM_ERRATA_775420 is not set
 CONFIG_ARM_GIC=y
 CONFIG_PL330=y
 # CONFIG_FIQ_DEBUGGER is not set
@@ -629,8 +653,6 @@ CONFIG_PL330=y
 # CONFIG_PCI_SYSCALL is not set
 # CONFIG_ARCH_SUPPORTS_MSI is not set
 # CONFIG_PCCARD is not set
-CONFIG_ARM_ERRATA_764369=y
-# CONFIG_PL310_ERRATA_769419 is not set
 
 #
 # Kernel Features
@@ -662,14 +684,13 @@ CONFIG_HAVE_ARCH_PFN_VALID=y
 CONFIG_ARCH_SKIP_SECONDARY_CALIBRATE=y
 CONFIG_HIGHMEM=y
 # CONFIG_HIGHPTE is not set
-CONFIG_HW_PERF_EVENTS=y
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_FLATMEM_MANUAL=y
 CONFIG_FLATMEM=y
 CONFIG_FLAT_NODE_MEM_MAP=y
 CONFIG_HAVE_MEMBLOCK=y
 CONFIG_PAGEFLAGS_EXTENDED=y
-CONFIG_SPLIT_PTLOCK_CPUS=999999
+CONFIG_SPLIT_PTLOCK_CPUS=4
 CONFIG_COMPACTION=y
 CONFIG_MIGRATION=y
 # CONFIG_PHYS_ADDR_T_64BIT is not set
@@ -1187,6 +1208,14 @@ CONFIG_RFKILL_PM=y
 #
 # Device Drivers
 #
+CONFIG_MALI400=y
+CONFIG_MALI_VER_R3P2=y
+# CONFIG_MALI400_DEBUG is not set
+# CONFIG_MALI400_PROFILING is not set
+CONFIG_MALI_DVFS=y
+CONFIG_MALI400_UMP=y
+# CONFIG_MALI_SHARED_INTERRUPTS is not set
+# CONFIG_UMP_DEBUG is not set
 
 #
 # Generic Driver Options
@@ -1318,7 +1347,6 @@ CONFIG_LINK_DEVICE_HSIC=y
 # CONFIG_WORKQUEUE_FRONT is not set
 # CONFIG_IPC_CMC22x_OLD_RFS is not set
 # CONFIG_SIPC_VER_5 is not set
-# CONFIG_SIM_DETECT is not set
 # CONFIG_SIM_SLOT_SWITCH is not set
 # CONFIG_LTE_MODEM_CMC220 is not set
 # CONFIG_INTERNAL_MODEM_IF is not set
@@ -1405,7 +1433,9 @@ CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_ATH_COMMON is not set
 # CONFIG_BCM4330 is not set
 CONFIG_BCM4334=y
+# CONFIG_BCM4335 is not set
 # CONFIG_BCM43241 is not set
+CONFIG_BROADCOM_WIFI=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
@@ -2110,7 +2140,6 @@ CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 # CONFIG_USB_ZR364XX is not set
 # CONFIG_USB_STKWEBCAM is not set
 # CONFIG_USB_S2255 is not set
-CONFIG_MALI_400MP_UMP=y
 CONFIG_VIDEO_SAMSUNG=y
 CONFIG_VIDEO_SAMSUNG_V4L2=y
 CONFIG_VIDEO_FIMC=y
@@ -2194,19 +2223,12 @@ CONFIG_SAMSUNG_WORKAROUND_HPD_GLANCE=y
 #
 # Graphics support
 #
-# CONFIG_MALI_VER_BEFORE_R3P2 is not set
 # CONFIG_DRM is not set
 CONFIG_ION=y
 CONFIG_ION_EXYNOS=y
 CONFIG_ION_EXYNOS_CONTIGHEAP_SIZE=71680
 # CONFIG_ION_EXYNOS_CONTIGHEAP_DEBUG is not set
-CONFIG_MALI400=y
-CONFIG_MALI_VER_R3P2=y
-# CONFIG_MALI400_DEBUG is not set
-# CONFIG_MALI400_PROFILING is not set
-CONFIG_MALI_DVFS=y
-CONFIG_MALI400_UMP=y
-# CONFIG_MALI_SHARED_INTERRUPTS is not set
+# CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
@@ -2237,8 +2259,6 @@ CONFIG_FB_S5P_SPLASH_SCREEN=y
 # CONFIG_FB_S5P_LCD_INIT is not set
 # CONFIG_FB_S5P_DEBUG is not set
 CONFIG_FB_S5P_VSYNC_THREAD=y
-# CONFIG_FB_S5P_VSYNC_SEND_UEVENTS is not set
-CONFIG_FB_S5P_VSYNC_SYSFS=y
 # CONFIG_FB_S5P_TRACE_UNDERRUN is not set
 CONFIG_FB_S5P_DEFAULT_WINDOW=2
 CONFIG_FB_S5P_NR_BUFFERS=2
@@ -2246,6 +2266,7 @@ CONFIG_FB_S5P_NR_BUFFERS=2
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMD=8192
 CONFIG_FB_S5P_MDNIE=y
 # CONFIG_FB_MDNIE_PWM is not set
+# CONFIG_FB_EBOOK_PANEL_SCENARIO is not set
 CONFIG_FB_S5P_MIPI_DSIM=y
 CONFIG_FB_BGRA_ORDER=y
 # CONFIG_FB_RGBA_ORDER is not set
@@ -2258,9 +2279,10 @@ CONFIG_FB_BGRA_ORDER=y
 CONFIG_FB_S5P_S6EVR02=y
 # CONFIG_FB_S5P_S6D6AA1 is not set
 # CONFIG_FB_S5P_S6E63M0 is not set
-# CONFIG_S6E8AA0_AMS529HA01 is not set
-CONFIG_S6E8AA0_AMS480GYXX=y
-CONFIG_AID_DIMMING=y
+# CONFIG_FB_S5P_NT71391 is not set
+# CONFIG_FB_S5P_S6D7AA0 is not set
+# CONFIG_FB_S5P_S6E88A0 is not set
+# CONFIG_FB_S5P_HX8369B is not set
 CONFIG_LCD_FREQ_SWITCH=y
 CONFIG_FB_S5P_EXTDSP=y
 # CONFIG_FB_S5P_EXTDSP_DEBUG is not set
@@ -2339,6 +2361,7 @@ CONFIG_SND_SOC=y
 # CONFIG_SND_SOC_CACHE_LZO is not set
 CONFIG_SND_SOC_SAMSUNG=y
 CONFIG_SND_SAMSUNG_I2S=y
+# CONFIG_SND_SOC_SAMSUNG_MIDAS_WM1811 is not set
 CONFIG_SND_SOC_SAMSUNG_T0_WM1811=y
 # CONFIG_SND_SOC_SAMSUNG_USE_DMA_WRAPPER is not set
 CONFIG_SND_SOC_SAMSUNG_I2S_SEC=y
@@ -2349,6 +2372,7 @@ CONFIG_SND_SAMSUNG_ALP=y
 CONFIG_AUDIO_SAMSUNG_MEMSIZE_SRP=1024
 # CONFIG_SND_SAMSUNG_RP_DEBUG is not set
 # CONFIG_SND_SAMSUNG_I2S_MASTER is not set
+# CONFIG_SND_DUOS_MODEM_SWITCH is not set
 # CONFIG_SND_USE_SUB_MIC is not set
 # CONFIG_SND_USE_THIRD_MIC is not set
 # CONFIG_SND_USE_STEREO_SPEAKER is not set
@@ -2359,11 +2383,11 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 CONFIG_SND_SOC_WM_HUBS=y
 CONFIG_SND_SOC_WM8994=y
 CONFIG_SND_SOC_USE_EXTERNAL_MIC_BIAS=y
-CONFIG_EXYNOS_SOUND_PLATFORM_DATA=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
 # CONFIG_HIDRAW is not set
+CONFIG_UHID=y
 
 #
 # USB Input Devices
@@ -2375,7 +2399,6 @@ CONFIG_USB_HID=y
 #
 # Special HID drivers
 #
-CONFIG_UHID=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_ACRUX=y
 # CONFIG_HID_ACRUX_FF is not set
@@ -2521,7 +2544,6 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_STORAGE_KARMA is not set
 # CONFIG_USB_STORAGE_CYPRESS_ATACB is not set
 # CONFIG_USB_STORAGE_ENE_UB6250 is not set
-# CONFIG_USB_UAS is not set
 # CONFIG_USB_LIBUSUAL is not set
 
 #
@@ -2584,9 +2606,8 @@ CONFIG_USB_SERIAL_PL2303=y
 # CONFIG_USB_SERIAL_VIVOPAY_SERIAL is not set
 # CONFIG_USB_SERIAL_ZIO is not set
 # CONFIG_USB_SERIAL_SSU100 is not set
-# CONFIG_USB_SERIAL_CSVT is not set
-# CONFIG_USB_SERIAL_DEBUG is not set
 CONFIG_USB_SERIAL_CSVT=y
+# CONFIG_USB_SERIAL_DEBUG is not set
 
 #
 # USB Miscellaneous drivers
@@ -2681,6 +2702,7 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
 CONFIG_MMC_SELECTIVE_PACKED_CMD_POLICY=y
+# CONFIG_MMC_CPRM is not set
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -2715,17 +2737,18 @@ CONFIG_LEDS_AN30259A=y
 # CONFIG_LEDS_DAC124S085 is not set
 # CONFIG_LEDS_PWM is not set
 # CONFIG_LEDS_REGULATOR is not set
+# CONFIG_LEDS_MAX8997 is not set
 # CONFIG_LEDS_BD2802 is not set
 # CONFIG_LEDS_LT3593 is not set
 CONFIG_LEDS_SWITCH=y
 CONFIG_LEDS_MAX77693=y
-# CONFIG_LEDS_MAX8997 is not set
 # CONFIG_LEDS_AAT1290A is not set
 # CONFIG_LEDS_TRIGGERS is not set
 
 #
 # LED Triggers
 #
+# CONFIG_LEDS_TRIGGER_NOTIFICATION is not set
 CONFIG_NFC_DEVICES=y
 # CONFIG_PN544_NFC is not set
 CONFIG_PN65N_NFC=y
@@ -2873,37 +2896,21 @@ CONFIG_CLKDEV_LOOKUP=y
 CONFIG_VIBETONZ=y
 CONFIG_MOTOR_DRV_MAX77693=y
 # CONFIG_MOTOR_DRV_ISA1200 is not set
-CONFIG_SAMSUNG_MODULES=y
 CONFIG_FM_RADIO=y
 # CONFIG_FM_SI4709 is not set
 CONFIG_FM_SI4705=y
-
-CONFIG_SENSORS_SSP=y
+# CONFIG_SENSORS_CORE is not set
 CONFIG_SENSORS_SYSFS=y
+CONFIG_SENSORS_SSP=y
+CONFIG_SENSORS_SSP_LSM330=y
+CONFIG_SENSORS_SSP_AK8963C=y
+CONFIG_SENSORS_SSP_CM36651=y
+CONFIG_SENSORS_SSP_BMP182=y
+CONFIG_SENSORS_SSP_AT32UC3L0128=y
 CONFIG_SENSORS_SSP_ACCELEROMETER_POSITION=7
 CONFIG_SENSORS_SSP_GYROSCOPE_POSITION=7
 CONFIG_SENSORS_SSP_MAGNETOMETER_POSITION=7
-CONFIG_SENSORS_SSP_LSM330=y
-CONFIG_SENSORS_SSP_CM36651=y
-CONFIG_SENSORS_SSP_AK8963C=y
-CONFIG_SENSORS_SSP_BMP182=y
-CONFIG_SENSORS_SSP_AT32UC3L0128=y
 CONFIG_SENSORS_SSP_SENSORHUB=y
-# CONFIG_SENSORS_AK8975C is not set
-# CONFIG_SENSORS_BMP180 is not set
-# CONFIG_SENSORS_CM3663 is not set
-# CONFIG_SENSORS_PAS2M110 is not set
-# CONFIG_SENSORS_BMA254 is not set
-# CONFIG_SENSORS_TAOS is not set
-# CONFIG_SENSORS_GP2A is not set
-# CONFIG_SENSORS_GP2A_ANALOG is not set
-# CONFIG_SENSORS_CM36651 is not set
-# CONFIG_SENSORS_BH1721 is not set
-# CONFIG_SENSORS_AL3201 is not set
-# CONFIG_SENSORS_K3DH is not set
-# CONFIG_SENSORS_K3G is not set
-# CONFIG_SENSORS_LSM330DLC is not set
-# CONFIG_SENSORS_LPS331 is not set
 # CONFIG_PM_DEVFREQ is not set
 # CONFIG_SAMSUNG_PHONE_SVNET is not set
 CONFIG_ACCESSORY=y
@@ -2914,14 +2921,15 @@ CONFIG_ACCESSORY=y
 # CONFIG_SAMSUNG_MHL_9290 is not set
 # CONFIG_IR_REMOCON is not set
 # CONFIG_EXTCON is not set
+CONFIG_BARCODE_EMUL=y
+CONFIG_BARCODE_EMUL_ICE4=y
+# CONFIG_SAMSUNG_PHONE_TTY is not set
 CONFIG_MOBICORE_SUPPORT=y
 # CONFIG_MOBICORE_DEBUG is not set
 CONFIG_MOBICORE_API=y
 CONFIG_IOMMU_SUPPORT=y
 # CONFIG_FELICA is not set
 # CONFIG_AUTHENTEC_VPNCLIENT_INTERCEPTOR is not set
-CONFIG_BARCODE_EMUL=y
-CONFIG_BARCODE_EMUL_ICE4=y
 
 #
 # File systems
