--- a/arch/arm/configs/custom_n8000_defconfig
+++ b/arch/arm/configs/custom_n8000_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.31 Kernel Configuration
+# Linux/arm 3.0.64 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -183,13 +183,17 @@ CONFIG_LBDAF=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_ROW=y
-CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_ROW is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
@@ -436,11 +440,11 @@ CONFIG_ANDROID_WIP=y
 # CONFIG_MACH_U1_NA_SPR is not set
 # CONFIG_MACH_U1_NA_USCC is not set
 # CONFIG_MACH_U1 is not set
+# CONFIG_TARGET_LOCALE_NAATT_TEMP is not set
 # CONFIG_MACH_PX is not set
 # CONFIG_TARGET_LOCALE_EUR is not set
 # CONFIG_TARGET_LOCALE_LTN is not set
 # CONFIG_TARGET_LOCALE_KOR is not set
-# CONFIG_TARGET_LOCALE_NAATT_TEMP is not set
 # CONFIG_TARGET_LOCALE_P2EUR_TEMP is not set
 # CONFIG_TARGET_LOCALE_P2TMO_TEMP is not set
 # CONFIG_TARGET_LOCALE_NA is not set
@@ -449,6 +453,12 @@ CONFIG_ANDROID_WIP=y
 # CONFIG_TARGET_LOCALE_JPN is not set
 # CONFIG_TARGET_LOCALE_CHN is not set
 CONFIG_TARGET_LOCALE_USA=y
+CONFIG_MACH_P4NOTELTE_USA_ANY=y
+# CONFIG_MACH_P4NOTELTE_USA_VZW is not set
+# CONFIG_MACH_P4NOTELTE_USA_ATT is not set
+# CONFIG_MACH_P4NOTELTE_USA_TMO is not set
+# CONFIG_MACH_P4NOTELTE_USA_SPR is not set
+# CONFIG_MACH_P4NOTELTE_USA_USCC is not set
 # CONFIG_MACH_SMDK4X12 is not set
 CONFIG_MACH_MIDAS=y
 # CONFIG_MACH_M0 is not set
@@ -544,6 +554,7 @@ CONFIG_SEC_MODEM_M0=y
 # CONFIG_SEC_MODEM_IRON is not set
 # CONFIG_SEC_MODEM_P8LTE is not set
 # CONFIG_SEC_MODEM_T0_TD_DUAL is not set
+# CONFIG_SEC_MODEM_U1_SPR is not set
 # CONFIG_BT_CSR8811 is not set
 # CONFIG_BT_BCM4330 is not set
 CONFIG_BT_BCM4334=y
@@ -558,6 +569,7 @@ CONFIG_BT_MGMT=y
 # CONFIG_QC_MODEM_MDM9X15 is not set
 # CONFIG_MDM_HSIC_PM is not set
 # CONFIG_EMI_ERROR_RECOVERY is not set
+CONFIG_SIM_DETECT=y
 CONFIG_USB_CDFS_SUPPORT=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
 # CONFIG_CORESIGHT_ETM is not set
@@ -614,6 +626,9 @@ CONFIG_ARM_ERRATA_761320=y
 # CONFIG_ARM_ERRATA_761171 is not set
 # CONFIG_ARM_ERRATA_762974 is not set
 # CONFIG_ARM_ERRATA_763722 is not set
+CONFIG_ARM_ERRATA_764369=y
+# CONFIG_PL310_ERRATA_769419 is not set
+# CONFIG_ARM_ERRATA_775420 is not set
 CONFIG_ARM_GIC=y
 CONFIG_PL330=y
 # CONFIG_FIQ_DEBUGGER is not set
@@ -624,8 +639,6 @@ CONFIG_PL330=y
 # CONFIG_PCI_SYSCALL is not set
 # CONFIG_ARCH_SUPPORTS_MSI is not set
 # CONFIG_PCCARD is not set
-CONFIG_ARM_ERRATA_764369=y
-# CONFIG_PL310_ERRATA_769419 is not set
 
 #
 # Kernel Features
@@ -1182,6 +1195,14 @@ CONFIG_RFKILL_PM=y
 #
 # Device Drivers
 #
+CONFIG_MALI400=y
+CONFIG_MALI_VER_R3P2=y
+# CONFIG_MALI400_DEBUG is not set
+# CONFIG_MALI400_PROFILING is not set
+CONFIG_MALI_DVFS=y
+CONFIG_MALI400_UMP=y
+# CONFIG_MALI_SHARED_INTERRUPTS is not set
+# CONFIG_UMP_DEBUG is not set
 
 #
 # Generic Driver Options
@@ -1309,10 +1330,10 @@ CONFIG_LINK_DEVICE_HSIC=y
 # CONFIG_WORKQUEUE_FRONT is not set
 # CONFIG_IPC_CMC22x_OLD_RFS is not set
 # CONFIG_SIPC_VER_5 is not set
-CONFIG_SIM_DETECT=y
 # CONFIG_SIM_SLOT_SWITCH is not set
 # CONFIG_LTE_MODEM_CMC220 is not set
 # CONFIG_INTERNAL_MODEM_IF is not set
+# CONFIG_TOUCH_WAKE is not set
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
@@ -1395,7 +1416,9 @@ CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_ATH_COMMON is not set
 # CONFIG_BCM4330 is not set
 CONFIG_BCM4334=y
+# CONFIG_BCM4335 is not set
 # CONFIG_BCM43241 is not set
+CONFIG_BROADCOM_WIFI=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
@@ -2093,7 +2116,6 @@ CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 # CONFIG_USB_ZR364XX is not set
 # CONFIG_USB_STKWEBCAM is not set
 # CONFIG_USB_S2255 is not set
-CONFIG_MALI_400MP_UMP=y
 CONFIG_VIDEO_SAMSUNG=y
 CONFIG_VIDEO_SAMSUNG_V4L2=y
 CONFIG_VIDEO_FIMC=y
@@ -2177,19 +2199,12 @@ CONFIG_SAMSUNG_WORKAROUND_HPD_GLANCE=y
 #
 # Graphics support
 #
-# CONFIG_MALI_VER_BEFORE_R3P2 is not set
 # CONFIG_DRM is not set
 CONFIG_ION=y
 CONFIG_ION_EXYNOS=y
 CONFIG_ION_EXYNOS_CONTIGHEAP_SIZE=81920
 # CONFIG_ION_EXYNOS_CONTIGHEAP_DEBUG is not set
-CONFIG_MALI400=y
-CONFIG_MALI_VER_R3P2=y
-# CONFIG_MALI400_DEBUG is not set
-# CONFIG_MALI400_PROFILING is not set
-CONFIG_MALI_DVFS=y
-CONFIG_MALI400_UMP=y
-# CONFIG_MALI_SHARED_INTERRUPTS is not set
+# CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
@@ -2220,8 +2235,6 @@ CONFIG_FB_S5P_SPLASH_SCREEN=y
 # CONFIG_FB_S5P_LCD_INIT is not set
 # CONFIG_FB_S5P_DEBUG is not set
 CONFIG_FB_S5P_VSYNC_THREAD=y
-# CONFIG_FB_S5P_VSYNC_SEND_UEVENTS is not set
-CONFIG_FB_S5P_VSYNC_SYSFS=y
 # CONFIG_FB_S5P_TRACE_UNDERRUN is not set
 CONFIG_FB_S5P_DEFAULT_WINDOW=3
 CONFIG_FB_S5P_NR_BUFFERS=2
@@ -2229,6 +2242,7 @@ CONFIG_FB_S5P_NR_BUFFERS=2
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMD=8192
 CONFIG_FB_S5P_MDNIE=y
 CONFIG_FB_MDNIE_PWM=y
+# CONFIG_FB_EBOOK_PANEL_SCENARIO is not set
 # CONFIG_FB_S5P_MIPI_DSIM is not set
 CONFIG_FB_BGRA_ORDER=y
 # CONFIG_FB_RGBA_ORDER is not set
@@ -2338,6 +2352,7 @@ CONFIG_SND_SOC_USE_EXTERNAL_MIC_BIAS=y
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
 # CONFIG_HIDRAW is not set
+CONFIG_UHID=y
 
 #
 # USB Input Devices
@@ -2349,7 +2364,6 @@ CONFIG_USB_HID=y
 #
 # Special HID drivers
 #
-CONFIG_UHID=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_ACRUX=y
 # CONFIG_HID_ACRUX_FF is not set
@@ -2495,7 +2509,6 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_STORAGE_KARMA is not set
 # CONFIG_USB_STORAGE_CYPRESS_ATACB is not set
 # CONFIG_USB_STORAGE_ENE_UB6250 is not set
-# CONFIG_USB_UAS is not set
 # CONFIG_USB_LIBUSUAL is not set
 
 #
@@ -2654,6 +2667,7 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
 CONFIG_MMC_SELECTIVE_PACKED_CMD_POLICY=y
+# CONFIG_MMC_CPRM is not set
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -2698,6 +2712,7 @@ CONFIG_LEDS_CLASS=y
 #
 # LED Triggers
 #
+# CONFIG_LEDS_TRIGGER_NOTIFICATION is not set
 # CONFIG_NFC_DEVICES is not set
 CONFIG_SWITCH=y
 CONFIG_SWITCH_GPIO=y
@@ -2881,6 +2896,7 @@ CONFIG_IR_REMOCON=y
 CONFIG_IR_REMOCON_MC96=y
 # CONFIG_EXTCON is not set
 # CONFIG_BARCODE_EMUL is not set
+# CONFIG_SAMSUNG_PHONE_TTY is not set
 CONFIG_MOBICORE_SUPPORT=y
 # CONFIG_MOBICORE_DEBUG is not set
 CONFIG_MOBICORE_API=y
