--- a/arch/arm/configs/custom_n801x_defconfig
+++ b/arch/arm/configs/custom_n801x_defconfig
@@ -183,13 +183,17 @@ CONFIG_LBDAF=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_ROW=y
-CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_ROW is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
@@ -436,11 +440,11 @@ CONFIG_ANDROID_WIP=y
 # CONFIG_MACH_U1_NA_SPR is not set
 # CONFIG_MACH_U1_NA_USCC is not set
 # CONFIG_MACH_U1 is not set
+# CONFIG_TARGET_LOCALE_NAATT_TEMP is not set
 # CONFIG_MACH_PX is not set
 # CONFIG_TARGET_LOCALE_EUR is not set
 # CONFIG_TARGET_LOCALE_LTN is not set
 # CONFIG_TARGET_LOCALE_KOR is not set
-# CONFIG_TARGET_LOCALE_NAATT_TEMP is not set
 # CONFIG_TARGET_LOCALE_P2EUR_TEMP is not set
 # CONFIG_TARGET_LOCALE_P2TMO_TEMP is not set
 # CONFIG_TARGET_LOCALE_NA is not set
@@ -449,6 +453,12 @@ CONFIG_ANDROID_WIP=y
 # CONFIG_TARGET_LOCALE_JPN is not set
 # CONFIG_TARGET_LOCALE_CHN is not set
 CONFIG_TARGET_LOCALE_USA=y
+CONFIG_MACH_P4NOTELTE_USA_ANY=y
+# CONFIG_MACH_P4NOTELTE_USA_VZW is not set
+# CONFIG_MACH_P4NOTELTE_USA_ATT is not set
+# CONFIG_MACH_P4NOTELTE_USA_TMO is not set
+# CONFIG_MACH_P4NOTELTE_USA_SPR is not set
+# CONFIG_MACH_P4NOTELTE_USA_USCC is not set
 # CONFIG_MACH_SMDK4X12 is not set
 CONFIG_MACH_MIDAS=y
 # CONFIG_MACH_M0 is not set
@@ -536,6 +546,7 @@ CONFIG_BT_MGMT=y
 # CONFIG_QC_MODEM_MDM9X15 is not set
 # CONFIG_MDM_HSIC_PM is not set
 # CONFIG_EMI_ERROR_RECOVERY is not set
+# CONFIG_SIM_DETECT is not set
 CONFIG_USB_CDFS_SUPPORT=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
 # CONFIG_CORESIGHT_ETM is not set
@@ -1161,6 +1172,14 @@ CONFIG_RFKILL_PM=y
 #
 # Device Drivers
 #
+CONFIG_MALI400=y
+CONFIG_MALI_VER_R3P2=y
+# CONFIG_MALI400_DEBUG is not set
+# CONFIG_MALI400_PROFILING is not set
+CONFIG_MALI_DVFS=y
+CONFIG_MALI400_UMP=y
+# CONFIG_MALI_SHARED_INTERRUPTS is not set
+# CONFIG_UMP_DEBUG is not set
 
 #
 # Generic Driver Options
@@ -1270,6 +1289,7 @@ CONFIG_STMPE811_ADC=y
 # CONFIG_SENSORS_LIS3_I2C is not set
 # CONFIG_SAMSUNG_C2C is not set
 # CONFIG_SEC_MODEM is not set
+# CONFIG_TOUCH_WAKE is not set
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
@@ -1350,14 +1370,13 @@ CONFIG_WLAN=y
 # CONFIG_USB_NET_RNDIS_WLAN is not set
 CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_ATH_COMMON is not set
-CONFIG_BCMDHD=m
 # CONFIG_BCM4330 is not set
 CONFIG_BCM4334=y
+# CONFIG_BCM4335 is not set
 # CONFIG_BCM43241 is not set
+CONFIG_BROADCOM_WIFI=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
-CONFIG_DHD_USE_STATIC_BUF=y
-CONFIG_DHD_USE_SCHED_SCAN=y
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 CONFIG_WLAN_REGION_CODE=100
 # CONFIG_HOSTAP is not set
@@ -2053,7 +2072,6 @@ CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 # CONFIG_USB_ZR364XX is not set
 # CONFIG_USB_STKWEBCAM is not set
 # CONFIG_USB_S2255 is not set
-CONFIG_MALI_400MP_UMP=y
 CONFIG_VIDEO_SAMSUNG=y
 CONFIG_VIDEO_SAMSUNG_V4L2=y
 CONFIG_VIDEO_FIMC=y
@@ -2137,19 +2155,12 @@ CONFIG_SAMSUNG_WORKAROUND_HPD_GLANCE=y
 #
 # Graphics support
 #
-# CONFIG_MALI_VER_BEFORE_R3P2 is not set
 # CONFIG_DRM is not set
 CONFIG_ION=y
 CONFIG_ION_EXYNOS=y
 CONFIG_ION_EXYNOS_CONTIGHEAP_SIZE=81920
 # CONFIG_ION_EXYNOS_CONTIGHEAP_DEBUG is not set
-CONFIG_MALI400=y
-CONFIG_MALI_VER_R3P2=y
-# CONFIG_MALI400_DEBUG is not set
-# CONFIG_MALI400_PROFILING is not set
-CONFIG_MALI_DVFS=y
-CONFIG_MALI400_UMP=y
-# CONFIG_MALI_SHARED_INTERRUPTS is not set
+# CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
@@ -2180,8 +2191,6 @@ CONFIG_FB_S5P_SPLASH_SCREEN=y
 # CONFIG_FB_S5P_LCD_INIT is not set
 # CONFIG_FB_S5P_DEBUG is not set
 CONFIG_FB_S5P_VSYNC_THREAD=y
-# CONFIG_FB_S5P_VSYNC_SEND_UEVENTS is not set
-CONFIG_FB_S5P_VSYNC_SYSFS=y
 # CONFIG_FB_S5P_TRACE_UNDERRUN is not set
 CONFIG_FB_S5P_DEFAULT_WINDOW=3
 CONFIG_FB_S5P_NR_BUFFERS=2
@@ -2189,6 +2198,7 @@ CONFIG_FB_S5P_NR_BUFFERS=2
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMD=8192
 CONFIG_FB_S5P_MDNIE=y
 CONFIG_FB_MDNIE_PWM=y
+# CONFIG_FB_EBOOK_PANEL_SCENARIO is not set
 # CONFIG_FB_S5P_MIPI_DSIM is not set
 CONFIG_FB_BGRA_ORDER=y
 # CONFIG_FB_RGBA_ORDER is not set
@@ -2613,6 +2623,7 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
 CONFIG_MMC_SELECTIVE_PACKED_CMD_POLICY=y
+# CONFIG_MMC_CPRM is not set
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -2657,6 +2668,7 @@ CONFIG_LEDS_CLASS=y
 #
 # LED Triggers
 #
+# CONFIG_LEDS_TRIGGER_NOTIFICATION is not set
 # CONFIG_NFC_DEVICES is not set
 CONFIG_SWITCH=y
 CONFIG_SWITCH_GPIO=y
@@ -2840,6 +2852,7 @@ CONFIG_IR_REMOCON=y
 CONFIG_IR_REMOCON_MC96=y
 # CONFIG_EXTCON is not set
 # CONFIG_BARCODE_EMUL is not set
+# CONFIG_SAMSUNG_PHONE_TTY is not set
 CONFIG_MOBICORE_SUPPORT=y
 # CONFIG_MOBICORE_DEBUG is not set
 CONFIG_MOBICORE_API=y
