--- a/arch/arm/configs/custom_t0ltecdma_defconfig
+++ b/arch/arm/configs/custom_t0ltecdma_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.31 Kernel Configuration
+# Linux/arm 3.0.64 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -30,7 +30,6 @@ CONFIG_ARM_PATCH_PHYS_VIRT=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
-CONFIG_IRQ_WORK=y
 
 #
 # General setup
@@ -154,7 +153,6 @@ CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
-CONFIG_HAVE_HW_BREAKPOINT=y
 
 #
 # GCOV-based kernel profiling
@@ -181,13 +179,17 @@ CONFIG_LBDAF=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_ROW=y
-CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_ROW is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
@@ -218,7 +220,7 @@ CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_WRITE_UNLOCK_BH is not set
 # CONFIG_INLINE_WRITE_UNLOCK_IRQ is not set
 # CONFIG_INLINE_WRITE_UNLOCK_IRQRESTORE is not set
-# CONFIG_MUTEX_SPIN_ON_OWNER is not set
+CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
 
 #
@@ -427,7 +429,6 @@ CONFIG_SEC_THERMISTOR=y
 # CONFIG_EXYNOS_SYSREG_PM is not set
 CONFIG_ANDROID_WIP=y
 # CONFIG_COMPACTION_RETRY is not set
-# CONFIG_COMPACTION_RETRY_DEBUG is not set
 
 #
 # EXYNOS4 Machines
@@ -440,11 +441,11 @@ CONFIG_ANDROID_WIP=y
 # CONFIG_MACH_U1_NA_SPR is not set
 # CONFIG_MACH_U1_NA_USCC is not set
 # CONFIG_MACH_U1 is not set
+# CONFIG_TARGET_LOCALE_NAATT_TEMP is not set
 # CONFIG_MACH_PX is not set
 # CONFIG_TARGET_LOCALE_EUR is not set
 # CONFIG_TARGET_LOCALE_LTN is not set
 # CONFIG_TARGET_LOCALE_KOR is not set
-# CONFIG_TARGET_LOCALE_NAATT_TEMP is not set
 # CONFIG_TARGET_LOCALE_P2EUR_TEMP is not set
 # CONFIG_TARGET_LOCALE_P2TMO_TEMP is not set
 # CONFIG_TARGET_LOCALE_NA is not set
@@ -453,6 +454,7 @@ CONFIG_ANDROID_WIP=y
 # CONFIG_TARGET_LOCALE_JPN is not set
 # CONFIG_TARGET_LOCALE_CHN is not set
 CONFIG_TARGET_LOCALE_USA=y
+CONFIG_MACH_T0_LTE=y
 # CONFIG_MACH_T0_USA_ATT is not set
 # CONFIG_MACH_T0_USA_TMO is not set
 CONFIG_MACH_T0_USA_VZW=y
@@ -478,7 +480,6 @@ CONFIG_MACH_MIDAS=y
 # CONFIG_MACH_P4NOTE is not set
 # CONFIG_MACH_GC1 is not set
 CONFIG_MACH_T0=y
-CONFIG_MACH_T0_LTE=y
 # CONFIG_MACH_IRON is not set
 # CONFIG_MACH_GRANDE is not set
 # CONFIG_MACH_BAFFIN is not set
@@ -559,11 +560,11 @@ CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_QC_MODEM_MDM9X15=y
 CONFIG_MDM_HSIC_PM=y
 # CONFIG_EMI_ERROR_RECOVERY is not set
+# CONFIG_SIM_DETECT is not set
 CONFIG_QC_MODEM_M3=y
 CONFIG_USB_CDFS_SUPPORT=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
 # CONFIG_CORESIGHT_ETM is not set
-CONFIG_CPU_FREQ_TETHERING=y
 
 #
 # Processor Type
@@ -617,6 +618,9 @@ CONFIG_ARM_ERRATA_761320=y
 # CONFIG_ARM_ERRATA_761171 is not set
 # CONFIG_ARM_ERRATA_762974 is not set
 # CONFIG_ARM_ERRATA_763722 is not set
+CONFIG_ARM_ERRATA_764369=y
+# CONFIG_PL310_ERRATA_769419 is not set
+# CONFIG_ARM_ERRATA_775420 is not set
 CONFIG_ARM_GIC=y
 CONFIG_PL330=y
 # CONFIG_FIQ_DEBUGGER is not set
@@ -627,8 +631,6 @@ CONFIG_PL330=y
 # CONFIG_PCI_SYSCALL is not set
 # CONFIG_ARCH_SUPPORTS_MSI is not set
 # CONFIG_PCCARD is not set
-CONFIG_ARM_ERRATA_764369=y
-# CONFIG_PL310_ERRATA_769419 is not set
 
 #
 # Kernel Features
@@ -660,7 +662,6 @@ CONFIG_HAVE_ARCH_PFN_VALID=y
 CONFIG_ARCH_SKIP_SECONDARY_CALIBRATE=y
 CONFIG_HIGHMEM=y
 # CONFIG_HIGHPTE is not set
-CONFIG_HW_PERF_EVENTS=y
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_FLATMEM_MANUAL=y
 CONFIG_FLATMEM=y
@@ -681,7 +682,6 @@ CONFIG_CMA=y
 # CONFIG_CMA_DEVELOPEMENT is not set
 CONFIG_CMA_BEST_FIT=y
 # CONFIG_DEBUG_VMALLOC is not set
-# CONFIG_LOWMEM_CHECK is not set
 CONFIG_FORCE_MAX_ZONEORDER=12
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
@@ -1186,6 +1186,14 @@ CONFIG_RFKILL_PM=y
 #
 # Device Drivers
 #
+CONFIG_MALI400=y
+CONFIG_MALI_VER_R3P2=y
+# CONFIG_MALI400_DEBUG is not set
+# CONFIG_MALI400_PROFILING is not set
+CONFIG_MALI_DVFS=y
+CONFIG_MALI400_UMP=y
+# CONFIG_MALI_SHARED_INTERRUPTS is not set
+# CONFIG_UMP_DEBUG is not set
 
 #
 # Generic Driver Options
@@ -1370,7 +1378,9 @@ CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_ATH_COMMON is not set
 # CONFIG_BCM4330 is not set
 CONFIG_BCM4334=y
+# CONFIG_BCM4335 is not set
 # CONFIG_BCM43241 is not set
+CONFIG_BROADCOM_WIFI=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
@@ -2103,7 +2113,6 @@ CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 # CONFIG_USB_ZR364XX is not set
 # CONFIG_USB_STKWEBCAM is not set
 # CONFIG_USB_S2255 is not set
-CONFIG_MALI_400MP_UMP=y
 CONFIG_VIDEO_SAMSUNG=y
 CONFIG_VIDEO_SAMSUNG_V4L2=y
 CONFIG_VIDEO_FIMC=y
@@ -2185,19 +2194,12 @@ CONFIG_SAMSUNG_WORKAROUND_HPD_GLANCE=y
 #
 # Graphics support
 #
-# CONFIG_MALI_VER_BEFORE_R3P2 is not set
 # CONFIG_DRM is not set
 CONFIG_ION=y
 CONFIG_ION_EXYNOS=y
 CONFIG_ION_EXYNOS_CONTIGHEAP_SIZE=71680
 # CONFIG_ION_EXYNOS_CONTIGHEAP_DEBUG is not set
-CONFIG_MALI400=y
-CONFIG_MALI_VER_R3P2=y
-# CONFIG_MALI400_DEBUG is not set
-# CONFIG_MALI400_PROFILING is not set
-CONFIG_MALI_DVFS=y
-CONFIG_MALI400_UMP=y
-# CONFIG_MALI_SHARED_INTERRUPTS is not set
+# CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
@@ -2228,8 +2230,6 @@ CONFIG_FB_S5P_SPLASH_SCREEN=y
 # CONFIG_FB_S5P_LCD_INIT is not set
 # CONFIG_FB_S5P_DEBUG is not set
 CONFIG_FB_S5P_VSYNC_THREAD=y
-# CONFIG_FB_S5P_VSYNC_SEND_UEVENTS is not set
-CONFIG_FB_S5P_VSYNC_SYSFS=y
 # CONFIG_FB_S5P_TRACE_UNDERRUN is not set
 CONFIG_FB_S5P_DEFAULT_WINDOW=2
 CONFIG_FB_S5P_NR_BUFFERS=2
@@ -2237,6 +2237,7 @@ CONFIG_FB_S5P_NR_BUFFERS=2
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMD=8192
 CONFIG_FB_S5P_MDNIE=y
 # CONFIG_FB_MDNIE_PWM is not set
+# CONFIG_FB_EBOOK_PANEL_SCENARIO is not set
 CONFIG_FB_S5P_MIPI_DSIM=y
 CONFIG_FB_BGRA_ORDER=y
 # CONFIG_FB_RGBA_ORDER is not set
@@ -2249,6 +2250,10 @@ CONFIG_FB_BGRA_ORDER=y
 CONFIG_FB_S5P_S6EVR02=y
 # CONFIG_FB_S5P_S6D6AA1 is not set
 # CONFIG_FB_S5P_S6E63M0 is not set
+# CONFIG_FB_S5P_NT71391 is not set
+# CONFIG_FB_S5P_S6D7AA0 is not set
+# CONFIG_FB_S5P_S6E88A0 is not set
+# CONFIG_FB_S5P_HX8369B is not set
 CONFIG_LCD_FREQ_SWITCH=y
 CONFIG_FB_S5P_EXTDSP=y
 # CONFIG_FB_S5P_EXTDSP_DEBUG is not set
@@ -2353,6 +2358,7 @@ CONFIG_SND_SOC_USE_EXTERNAL_MIC_BIAS=y
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
 # CONFIG_HIDRAW is not set
+CONFIG_UHID=y
 
 #
 # USB Input Devices
@@ -2364,7 +2370,6 @@ CONFIG_USB_HID=y
 #
 # Special HID drivers
 #
-CONFIG_UHID=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_ACRUX=y
 # CONFIG_HID_ACRUX_FF is not set
@@ -2510,7 +2515,6 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_STORAGE_KARMA is not set
 # CONFIG_USB_STORAGE_CYPRESS_ATACB is not set
 # CONFIG_USB_STORAGE_ENE_UB6250 is not set
-# CONFIG_USB_UAS is not set
 # CONFIG_USB_LIBUSUAL is not set
 
 #
@@ -2717,6 +2721,7 @@ CONFIG_LEDS_MAX77693=y
 #
 # LED Triggers
 #
+# CONFIG_LEDS_TRIGGER_NOTIFICATION is not set
 CONFIG_NFC_DEVICES=y
 # CONFIG_PN544_NFC is not set
 CONFIG_PN65N_NFC=y
@@ -2889,6 +2894,7 @@ CONFIG_ACCESSORY=y
 # CONFIG_EXTCON is not set
 CONFIG_BARCODE_EMUL=y
 CONFIG_BARCODE_EMUL_ICE4=y
+# CONFIG_SAMSUNG_PHONE_TTY is not set
 CONFIG_MOBICORE_SUPPORT=y
 # CONFIG_MOBICORE_DEBUG is not set
 CONFIG_MOBICORE_API=y
