mach-u1: Fix building for i9100
I broke it with Ia07292f105fc3a5df2d38a4088a85f55f4bfdfa7

Change-Id: Ifb7c7f199af31bde47ba3edef8360e1ac3fd3e86

--- a/arch/arm/mach-exynos/Makefile
+++ b/arch/arm/mach-exynos/Makefile
@@ -180,6 +180,7 @@ obj-$(CONFIG_MIDAS_COMMON)		+= sec-common.o board-gps-bcm475x.o \
 					   midas-camera.o midas-thermistor.o \
 					   midas-mhl.o midas-sound.o
 obj-$(CONFIG_FB_S5P_MIPI_DSIM)		+= board-lcd-mipi.o
+obj-$(CONFIG_FB_S5P_LD9040)			+= board-lcd-rgb.o
 endif
 endif
 endif
