[Do not merge] smdk4412: Enables ARM errata 761320 for smdk4210 as well.
ARM_ERRATA_761320 is already active for smdk4412 and smdk4212, but
should be applicable to the Cortex A9 r2p7 cores in smdk4210 as well.

Do not merge, for testing only, seems to be causing restarts in some
apps. However it also does seem to resolve or diminish the fuse problem.

Change-Id: I7685119bd738dd7e43c322b3c4af0d47fecb2714

--- a/arch/arm/mach-exynos/Kconfig
+++ b/arch/arm/mach-exynos/Kconfig
@@ -18,6 +18,7 @@ config ARCH_EXYNOS4
 	select ARM_ERRATA_743622
 	select ARM_ERRATA_751472
 	select ARM_ERRATA_754322
+	select ARM_ERRATA_761320 if SMP
 	select ARM_ERRATA_764369
 	help
 	  Samsung EXYNOS4 series based systems
@@ -50,7 +51,6 @@ config CPU_EXYNOS4212
 config CPU_EXYNOS4412
 	bool
 	select S3C_PL330_DMA
-	select ARM_ERRATA_761320
 	help
 	  Enable EXYNOS4412 CPU support
 
