--- a/arch/arm/configs/custom_d710_defconfig
+++ b/arch/arm/configs/custom_d710_defconfig
@@ -579,7 +579,7 @@ CONFIG_ARM_ERRATA_751472=y
 CONFIG_ARM_ERRATA_753970=y
 CONFIG_ARM_ERRATA_754322=y
 # CONFIG_ARM_ERRATA_754327 is not set
-# CONFIG_ARM_ERRATA_761320 is not set
+CONFIG_ARM_ERRATA_761320=y
 # CONFIG_ARM_ERRATA_761171 is not set
 # CONFIG_ARM_ERRATA_762974 is not set
 # CONFIG_ARM_ERRATA_763722 is not set
