smdk4412: Fix MFC memory allocation Causing not working video camera and broken hardware decoders/encoders on N80xx
Change-Id: If67eeda950b2147634a3b91700ee269d607d5687

--- a/arch/arm/configs/custom_n801x_defconfig
+++ b/arch/arm/configs/custom_n801x_defconfig
@@ -2101,7 +2101,7 @@ CONFIG_LSI_HDMI_AUDIO_CH_EVENT=y
 CONFIG_VIDEO_MFC5X=y
 CONFIG_VIDEO_MFC_MAX_INSTANCE=4
 # CONFIG_VIDEO_MFC5X_DEBUG is not set
-CONFIG_USE_MFC_CMA=y
+# CONFIG_USE_MFC_CMA is not set
 CONFIG_VIDEO_FIMG2D=y
 # CONFIG_VIDEO_FIMG2D_DEBUG is not set
 CONFIG_VIDEO_FIMG2D4X=y
@@ -2113,7 +2113,7 @@ CONFIG_JPEG_V2_1=y
 #
 # Reserved memory configurations
 #
-CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMC0=62464
+CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMC0=12288
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMC1=24640
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMC2=0
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMC3=0
