smdk4412: disable selinux (otherwise kernel don't boot)
This apply on n80xx devices, maybe the same change is necessary for other devices too.

Change-Id: Iebb77b25e85c0d39f9ec3abd25fb5bd209548304

--- a/arch/arm/configs/custom_n801x_defconfig
+++ b/arch/arm/configs/custom_n801x_defconfig
@@ -3166,9 +3166,9 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
 # CONFIG_IMA is not set
-CONFIG_DEFAULT_SECURITY_SELINUX=y
+# CONFIG_DEFAULT_SECURITY_SELINUX is not set
 # CONFIG_DEFAULT_SECURITY_DAC is not set
-CONFIG_DEFAULT_SECURITY="selinux"
+# CONFIG_DEFAULT_SECURITY=""
 CONFIG_CRYPTO=y
 
 #
