Revert "defconfigs: Disable keyboard dock driver for Note 10.1 devices"
This reverts commit 1a7789d11e8948e173a057696ae072b95482ec09.

requries: https://gerrit.omnirom.org/#/c/10601/

Signed-off-by: Humberto Borba <humberos@gmail.com>
Change-Id: I871d65f5a1959437dde9f51c4ba4c5074ab45b0c

--- a/arch/arm/configs/custom_i925_defconfig
+++ b/arch/arm/configs/custom_i925_defconfig
@@ -2859,7 +2859,7 @@ CONFIG_SENSORS_LSM330DLC=y
 CONFIG_ACCESSORY=y
 CONFIG_30PIN_CONN=y
 # CONFIG_MHL_SII9234 is not set
-# CONFIG_SEC_KEYBOARD_DOCK is not set
+CONFIG_SEC_KEYBOARD_DOCK=y
 # CONFIG_HPD_PULL is not set
 CONFIG_SAMSUNG_MHL_9290=y
 CONFIG_IR_REMOCON=y
